Can now run specific test through tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,py32
+envlist = py27,py34
 skipsdist = True
 
 [testenv]
@@ -7,5 +7,5 @@ deps=
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/requirements_dev.txt
     
-commands=python runtests.py  # or 'nosetests' or ...
+commands=python runtests.py {posargs} # or 'nosetests' or ...
 changedir=tests
