Updated tox config

--- a/tox.ini
+++ b/tox.ini
@@ -7,5 +7,5 @@ deps=
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/requirements_dev.txt
     
-commands=python runtests.py {posargs} # or 'nosetests' or ...
+commands=python runtests.py {posargs}# 
 changedir=tests
