--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ python:
 install: pip install -r requirements_dev.txt
 
 # command to run tests using coverage, e.g. python setup.py test
-script: python tests/runtests.py
+script: cd tests && python runtests.py
