--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,10 @@
 [tox]
-envlist = py27,py34
+envlist = py34
 skipsdist = True
 
 [testenv]
 deps=
     -r{toxinidir}/requirements_dev.txt
-    
-commands=python runtests.py {posargs}# 
+
+commands=python runtests.py {posargs}#
 changedir=tests
